<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imagem_desc">Foto Aluno</string>
    <string name="campo_nome">Nome:</string>
    <string name="campo_telefone">Telefone:</string>
    <string name="campo_endereco">Endereço:</string>
    <string name="campo_site">Site:</string>
    <string name="campo_nota">Nota:</string>
    <string name="botao_cadastro">Inserir</string>
    <string name="hint_nome">Digite seu nome aqui...</string>
    <string name="hint_telefone">Digite seu telefone aqui...</string>
    <string name="hint_endereco">Digite seu endereço aqui...</string>
    <string name="hint_site">Digite seu site aqui...</string>

</resources>